--- a/outbreakInterval model2.Rmd
+++ b/outbreakInterval model2.Rmd
@@ -7,6 +7,7 @@ numbersections: true
 output:
   pdf_document:
     toc: false
+    keep_md: yes
 header-includes:
   - \usepackage{float}
   - \floatplacement{figure}{H}
@@ -15,7 +16,9 @@ header-includes:
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = FALSE,
                       message = FALSE,
-                      warning = FALSE)
+                      warning = FALSE,
+                      dev = c("png", "tiff"),
+                      dpi = 300)
 library(tidyverse)
 
 ```
@@ -119,7 +122,10 @@ The dynamic outbreak model developed here also requires initial values for $\mat
 
 Based on this parameterization of $K$, the region WSR vulnerabilities are calculated over a 25 year time horizon corresponding to the years 2025 to 2050, and presented in Figure \ref{fig:spatDist}.
 
-```{r, fig.show='hold', fig.width=6, fig.height=5, fig.align='center', ft.align = "center", fig.cap="\\label{fig:spatDist}Spatial distribution of wheat stem rust outbreaks over time. Outbreaks are assumed to occur at the peaks of vulnerability.", echo=FALSE}
+```{r Fig2, fig.show='hold', fig.width=6, fig.height=5, fig.align='center', ft.align = "center", fig.cap="\\label{fig:spatDist}Spatial distribution of wheat stem rust outbreaks over time. Outbreaks are assumed to occur at the peaks of vulnerability.", echo=FALSE}
+
+# randIntgr <- sample(100:999, 1)
+# set.seed(randIntgr)
 
 # Own
 kSSA <- 1 # * mSSA
@@ -175,7 +181,7 @@ U <- eigVecs
 # Derive max amplitude and phase shift parameters based on initial values
 # Cvec <- f0 * sqrt(1 + 1 / resFreqs^2 * dLnfdt0^2)
 # phiVec <- -atan(-1 / resFreqs * dLnfdt0)
-n <- length(resFreqs)
+# n <- length(resFreqs)
 # c0 <- t(U) %*% rnorm(n)
 # cDot0 <- t(U) %*% rnorm(n)
 c0 <- c(1.6574469, -0.6223231, 0.4870719, -0.6398373, -0.4606594, 0.4334534, -0.7370816, -0.5185418)
@@ -183,11 +189,12 @@ c0 <- c(1.6574469, -0.6223231, 0.4870719, -0.6398373, -0.4606594, 0.4334534, -0.
 cDot0 <- c(-0.18966722, 0.93685226, 1.47569166, -1.17947652, 0.85290798, 1.05887843, 0.06238909, -0.19244532)
 #------------------
 lenT <- 300
-th <- 25 #time horizon in years, 1 year = 2 pi
+th <- 26 #time horizon in years, 1 year = 2 pi
 tVec <- seq(0, th * 2 * pi, length.out = lenT)
 list_qVec <- list()
 for(t in 1:lenT){
   #fVec <- Cvec * cos(resFreqs * tVec[t] - phiVec)
+  #Eq 7.137 Meirovitch 2001
   fVec <- c0 * cos(resFreqs * tVec[t]) + cDot0 * sin(resFreqs * tVec[t])
   qVec <- U %*% fVec
   list_qVec[[t]] <- t(qVec)
@@ -220,14 +227,14 @@ for(i in 1:ncol(df)){
 }
 outMat[is.na(outMat)] <- 0
 dfCSV <- data.frame(outMat)
-colnames(dfCSV) <- 2025:2049
+colnames(dfCSV) <- 2025:2050
 dfCSV$Region <- regOrder
 dfCSV <- dfCSV[, c(colnames(dfCSV)[ncol(dfCSV)], colnames(dfCSV)[-ncol(dfCSV)])]
 thisFolder <- "D:/OneDrive - CGIAR/Documents 1/CIAT 2/FnM Initiative/WSR 2Blades/"
 thisFileName <- "outbreakSpatDist.csv"
 thisFilePath <- paste0(thisFolder, thisFileName)
 #dfCSV <- rbind(colnames(dfCSV), dfCSV)
-write.csv(dfCSV, thisFilePath)
+# write.csv(dfCSV, thisFilePath)
 #-----------------------------------------------------------------------
 # For graphic
 df$Year <- 2025 + yrVec
@@ -243,26 +250,72 @@ df <- df %>% gather_("Region", "Vulnerability", gatherCols)
 #                  axis.ticks.y = element_blank())
 # gg
 
-#df$Year <- as.Date(as.character(df$Year), "%Y")
 gg <- ggplot(df, aes(x = Year, y = Vulnerability))
 gg <- gg + geom_line()
-#gg <- gg + geom_hline(yintercept = 0)
-#gg <- gg + scale_x_continuous(breaks = 5)
+gg <- gg + scale_x_continuous(breaks = c(2025, 2030, 2035, 2040, 2045, 2050))
 # gg <- gg + scale_x_date(date_breaks = "1 year", date_labels = "%Y")
 # gg <- gg + scale_x_date(breaks = scales::breaks_pretty(n = 8), labels = scales::date_format("%Y"))
 gg <- gg + facet_wrap(~Region)
 gg <- gg + coord_cartesian(xlim = c(2024, 2050))
 gg <- gg + theme_bw()
 gg <- gg + theme(axis.text.y = element_blank(),
+                 axis.text.x = element_text(angle = 60, hjust = 1),
+                 axis.title.x = element_blank(),
                  axis.ticks.y = element_blank())
 gg
 
 #------------------------------------------------------------------
 
-dfCSV <- df
-for(i in 1:n)
-v <- subset(df, Region == "Australia")$Vulnerability
-pracma::findpeaks(v)
-plot(v)
+
+```
+
+
+
+<!-- # ```{r Fig3, fig.show='hold', fig.width=6, fig.height=2, fig.align='center', ft.align = "center", fig.cap="\\label{fig:spatDist}Spatial distribution of wheat stem rust outbreaks over time.", echo=FALSE} -->
+
+<!-- # dfCSV <- df -->
+<!-- # for(i in 1:n) -->
+<!-- # v <- subset(df, Region == "Australia")$Vulnerability -->
+<!-- # pracma::findpeaks(v) -->
+<!-- # plot(v) -->
+
+<!-- dfPlot <- dfCSV %>% gather(Year, Val, `2025`:`2050`) -->
+<!-- gg <- ggplot(dfPlot, aes(x = Year, y = Region, fill = Val)) -->
+<!-- gg <- gg + geom_tile(color = "black") -->
+<!-- gg <- gg + scale_fill_gradient(low = "white", high = "gray") -->
+<!-- gg <- gg + theme(axis.title = element_blank(), -->
+<!--                  axis.text.x = element_text(angle = 60, hjust = 1), -->
+<!--                  legend.position = "none") -->
+<!-- gg -->
+<!-- ``` -->
+
+```{r}
+
+n <- length(regOrder)
+forceFreqRegion <- matrix(c(1, rep(0, n - 1)), n, 1)
+forceFreqScalar <- seq(0, 1, length.out = 500)
+listAmpVec <- list()
+I <- diag(rep(1, n))
+for(i in 1:length(forceFreqScalar)){
+  listAmpVec[[i]] <- t(solve(Kmod - I * forceFreqScalar[i]^2) %*% forceFreqRegion)
+}
+df <- as.data.frame(do.call(rbind, listAmpVec))
+colnames(df) <- regOrder
+gatherCols <- colnames(df)
+df$Frequency <- forceFreqScalar
+df <- df %>% gather_("Region", "Vulnerability", gatherCols)
+df$Vulnerability <- abs(df$Vulnerability)
+gg <- ggplot(df, aes(x = Frequency, y = Vulnerability, group = Region, color = Region))
+gg <- gg + geom_vline(xintercept = resFreqs, color = "red", linetype = "dashed")
+gg <- gg + geom_hline(yintercept = 0)
+gg <- gg + geom_vline(xintercept = 0)
+gg <- gg + geom_line()
+gg <- gg + coord_cartesian(ylim = c(-1, 3), xlim = c(0, 0.4))
+gg <- gg + theme_bw()
+gg <- gg + theme(legend.position = "top",
+                 axis.text = element_blank(),
+                 axis.ticks = element_blank())
+gg
+
 
 ```
